--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Kevin_Selby",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -15,4 +16,8 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.3.4"
   }
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
+
 }
